--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,6 @@
     "devStart": "nodemon app.js"
   },
   "dependencies": {
-    "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -16,5 +15,8 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "bcrypt": "^3.0.6"
   }
 }
