--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -17,6 +16,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "bcrypt": "^3.0.6"
+    "bcrypt": "^3.0.6",
+    "dotenv": "^8.2.0"
   }
 }
