--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "dotenv": "^8.2.0",
     "express-generator": "^4.16.1",
+    "history": "^4.10.1",
     "jquery": "^3.4.1",
     "mdbreact": "^4.22.0",
     "popper.js": "^1.15.0",
