--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "popper.js": "^1.15.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
     "ts-pnp": "^1.1.4",
